src/tess/tl/test/fail/test_fail_function_pointer_missing_arity.tl
#module main

add(a, b) { a + b }

main() {
    f := add
    f(1, 2)
}
